style: improve styles and presentation on login and index pages

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,7 +1,33 @@
-
-body {
+#body_login {
     font-family: sans-serif;
-    background-color: #fff;
+    display: flex;
+    background-color: #f4f4f9;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+}
+
+#login_container {
+    background-color: white;
+    padding: 20px 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 400px;
+    text-align: center;
+}
+
+#button_login {
+    width: 80%;
+    padding: 10px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
 }
 
 #all_characters_list {
@@ -9,7 +35,7 @@ body {
     flex-wrap: wrap;
     gap: 15px;
     justify-content: center;
-    padding-bottom: 250px; 
+    padding-bottom: 250px;
 }
 
 .character-card {
@@ -18,7 +44,7 @@ body {
     padding: 10px;
     text-align: center;
     width: 150px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .character-card img {
@@ -32,11 +58,10 @@ body {
     bottom: 0;
     left: 0;
     width: 100%;
-    
     background-color: #f4f4f4;
-    padding: 20px;
+    padding: 10px;
     border-top: 2px solid #ccc;
-    box-shadow: 0 -4px 10px rgba(0,0,0,0.15);
+    box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.15);
     text-align: center;
     box-sizing: border-box;
 }
