--- a/templates/login.html
+++ b/templates/login.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    
+
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 
-<body>
-    <h2>Iniciar sesión</h2>
-    <form id="loginForm">
-        <label for="username">Usuario:</label>
-        <input type="text" id="username" required><br><br>
-        <label for="password">Contraseña:</label>
-        <input type="password" id="password" required><br><br>
-        <button type="submit">Ingresar</button>
-    </form>
-
-    <div id="login_result"></div>
+<body id="body_login">
+    <div id="login_container">
+        <h2>Iniciar sesión</h2>
+        <form id="loginForm">
+            <label for="username">Usuario:</label>
+            <input type="text" id="username" required placeholder="Ingresa tu usuario"><br><br>
+            <label for="password">Contraseña:</label>
+            <input type="password" id="password" required placeholder="Ingresa tu contraseña"><br><br>
+            <button id="button_login" type="submit">Ingresar</button>
+        </form>
+    </div>
 
     <script>
         const backend = "http://127.0.0.1:5000";
